--- a/pocketshop-webapp/package.json
+++ b/pocketshop-webapp/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "pockethome",
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Murshid Hassen <murshid.hassen@gmail.com>",
   "dependencies": {
     "gatsby": "^2.13.42",
     "gatsby-image": "^2.2.7",
